🪄 :: (#1036) Arrays.asList -> List.of 변경